// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamingProgressCount should not render a trace link when not opted into with &trace=1 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 0,
      "matchCount": 0,
      "skipped": Array [],
      "trace": "https://sourcegraph.test:3443/-/debug/jaeger/trace/abcdefg",
    }
  }
  state="loading"
>
  <small
    className="streaming-progress__count d-flex align-items-center streaming-progress__count--in-progress"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    0
     
    results
     in
     
    0.00
    s
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for 0 items in progress 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 0,
      "matchCount": 0,
      "skipped": Array [],
    }
  }
  state="loading"
>
  <small
    className="streaming-progress__count d-flex align-items-center streaming-progress__count--in-progress"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    0
     
    results
     in
     
    0.00
    s
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for 0 repositories 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 0,
      "matchCount": 0,
      "repositoriesCount": 0,
      "skipped": Array [],
    }
  }
  state="loading"
>
  <small
    className="streaming-progress__count d-flex align-items-center streaming-progress__count--in-progress"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    0
     
    results
     in
     
    0.00
    s
     
    from 
    0
     
    repositories
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for 1 item complete 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 1250,
      "matchCount": 1,
      "repositoriesCount": 1,
      "skipped": Array [],
    }
  }
  state="complete"
>
  <small
    className="streaming-progress__count d-flex align-items-center"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    1
     
    result
     in
     
    1.25
    s
     
    from 
    1
     
    repository
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for 123 items complete 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 1250,
      "matchCount": 123,
      "repositoriesCount": 500,
      "skipped": Array [],
    }
  }
  state="complete"
>
  <small
    className="streaming-progress__count d-flex align-items-center"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    123
     
    results
     in
     
    1.25
    s
     
    from 
    500
     
    repositories
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for big numbers complete 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 52500,
      "matchCount": 1234567,
      "repositoriesCount": 8901,
      "skipped": Array [],
    }
  }
  state="complete"
>
  <small
    className="streaming-progress__count d-flex align-items-center"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    1.2m
     
    results
     in
     
    52.50
    s
     
    from 
    8.9k
     
    repositories
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly for limithit 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 1250,
      "matchCount": 123,
      "repositoriesCount": 500,
      "skipped": Array [
        Object {
          "message": "match limit",
          "reason": "document-match-limit",
          "severity": "warn",
          "title": "match limit",
        },
      ],
    }
  }
  state="complete"
>
  <small
    className="streaming-progress__count d-flex align-items-center"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    123
    +
     
    results
     in
     
    1.25
    s
     
    from 
    500
     
    repositories
  </small>
</StreamingProgressCount>
`;

exports[`StreamingProgressCount should render correctly when a trace url is provided 1`] = `
<StreamingProgressCount
  progress={
    Object {
      "durationMs": 0,
      "matchCount": 0,
      "skipped": Array [],
      "trace": "https://sourcegraph.test:3443/-/debug/jaeger/trace/abcdefg",
    }
  }
  showTrace={true}
  state="loading"
>
  <small
    className="streaming-progress__count d-flex align-items-center streaming-progress__count--in-progress"
  >
    <Memo(CalculatorIcon)
      className="mr-2 icon-inline streaming-progress__count-icon"
    />
    0
     
    results
     in
     
    0.00
    s
  </small>
  <small
    className="d-flex ml-2"
  >
    <a
      href="https://sourcegraph.test:3443/-/debug/jaeger/trace/abcdefg"
    >
      <Memo(ClipboardPulseOutlineIcon)
        className="mr-2 icon-inline"
      />
      View trace
    </a>
  </small>
</StreamingProgressCount>
`;
